<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item android:id="@+id/calculadora_basica"
        android:title="@string/calculadora_basica"
        android:icon="@drawable/ic_plus_one_black_24dp"/>
    <item android:id="@+id/sonido"
        android:title="@string/sonido"
        android:icon="@drawable/ic_fast_forward_black_24dp"/>
    <item android:id="@+id/sitio_web"
        android:title="@string/sitio_web"
        android:icon="@drawable/ic_language_black_24dp"/>
    <item android:id="@+id/aplicaciones"
        android:title="@string/aplicaciones"
        android:icon="@drawable/ic_apps_black_24dp"/>
    <item android:id="@+id/propuesta"
        android:title="@string/propuesta"
        android:icon="@drawable/ic_camera_alt_black_24dp"/>


</menu>